--- a/SourceCode/CardIdleRemastered/App.xaml
+++ b/SourceCode/CardIdleRemastered/App.xaml
@@ -10,6 +10,17 @@
         <SolidColorBrush x:Key="DynRunningGame" Color="Cyan"/>        
         <SolidColorBrush x:Key="DynStatsHeaders" Color="Gold"/>        
         <SolidColorBrush x:Key="DynStatsValues" Color="Cyan"/>        
-        <SolidColorBrush x:Key="DynIdleButtons" Color="Gold"/>        
+        <SolidColorBrush x:Key="DynIdleButtons" Color="Gold"/>
+
+        <Style x:Key="CmdButton" TargetType="Button">
+            <Setter Property="Width" Value="32"/>
+            <Setter Property="Height" Value="32"/>
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="Background" Value="WhiteSmoke" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+        </Style>       
     </Application.Resources>
 </Application>
