--- a/SourceCode/CardIdleRemastered/App.xaml
+++ b/SourceCode/CardIdleRemastered/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Startup="LaunchCardIdle"
-             >             
+             Exit="StopCardIdle">             
     <Application.Resources>
         <SolidColorBrush x:Key="DarkTheme" Color="#262627"/>
         <SolidColorBrush x:Key="DynLevelBorder" Color="White"/>        
@@ -12,6 +12,8 @@
         <SolidColorBrush x:Key="DynStatsValues" Color="Cyan"/>        
         <SolidColorBrush x:Key="DynIdleButtons" Color="Gold"/>
 
+        <BooleanToVisibilityConverter x:Key="BoolToVisible"/>
+        
         <Style x:Key="CmdButton" TargetType="Button">
             <Setter Property="Width" Value="32"/>
             <Setter Property="Height" Value="32"/>
