--- a/SourceCode/CardIdleRemastered/Views/BadgesWindow.xaml
+++ b/SourceCode/CardIdleRemastered/Views/BadgesWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:res="clr-namespace:CardIdleRemastered.Properties"
         xmlns:loc="clr-namespace:CardIdleRemastered"        
         xmlns:cmd="clr-namespace:CardIdleRemastered.Commands"
-        Title="{x:Static res:Resources.Title}" Height="Auto" Width="Auto" 
-        Closing="BadgesWindowClosing" Loaded="BadgesWindowLoaded" 
+        Title="{x:Static res:Resources.Title}" Height="Auto" Width="Auto"         
         WindowStartupLocation="CenterScreen" 
         Background="{DynamicResource DarkTheme}"
         mc:Ignorable="d"
@@ -116,13 +115,16 @@
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Border Margin="25" HorizontalAlignment="Left" VerticalAlignment="Top">
+            
+            <Border Margin="25" Name="AvatarBorder"
+                    HorizontalAlignment="Left" VerticalAlignment="Top">
                 <Image Name="picAvatar" Source="{Binding Path=AvatarUrl}" 
                        MinWidth="10" MinHeight="10" 
                        HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
                        Stretch="UniformToFill"/>
                 <Border.Style>
                     <Style TargetType="{x:Type Border}">
+                        <Setter Property="BorderBrush" Value="White"/>
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding Path=IsCardIdleActive}" Value="True">
                                 <Setter Property="BorderThickness" Value="2"/>
@@ -133,30 +135,85 @@
                 </Border.Style>
             </Border>
 
-            <StackPanel Grid.Column="1" Margin="0,25,0,0" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Grid Grid.Row="0" Grid.Column="1" Margin="0,25,0,0" 
+                  HorizontalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                
                 <Label Name="lblUserName" Content="{Binding Path=UserName}"  
                        VerticalAlignment="Top"
                        FontSize="24" Foreground="White"/>
-                <Label Content="{x:Static res:Resources.Logout}"
+                <StackPanel Grid.Row="0" Grid.Column="1">
+                    <Label Content="{x:Static res:Resources.Login}"
                         Background="Transparent" BorderThickness="0"
                         VerticalAlignment="Top" Margin="5" Padding="5">
-                    <Label.Style>
-                        <Style TargetType="{x:Type Label}">
-                            <Setter Property="Foreground" Value="White"/>
+                        <Label.Style>
+                            <Style TargetType="{x:Type Label}">
+                                <Setter Property="Foreground" Value="White"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsAuthorized}" Value="True">
+                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                    </DataTrigger>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Foreground" Value="Green"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Label.Style>
+                        <Label.InputBindings>
+                            <MouseBinding Gesture="LeftClick" Command="{Binding Path=LoginCmd}" />
+                        </Label.InputBindings>
+                    </Label>
+
+                    <Label Content="{x:Static res:Resources.Logout}"
+                        Background="Transparent" BorderThickness="0"
+                        VerticalAlignment="Top" Margin="5" Padding="5">
+                        <Label.Style>
+                            <Style TargetType="{x:Type Label}">
+                                <Setter Property="Foreground" Value="White"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsAuthorized}" Value="False">
+                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                    </DataTrigger>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Foreground" Value="Red"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Label.Style>
+                        <Label.InputBindings>
+                            <MouseBinding Gesture="LeftClick" Command="{Binding Path=LogoutCmd}" />
+                        </Label.InputBindings>
+                    </Label>
+                </StackPanel>
+
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="5"
+                           Foreground="{Binding BorderBrush, ElementName=AvatarBorder}">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Text" Value="{x:Static res:Resources.NotInGame}"/>
                             <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Foreground" Value="Red"/>
-                                </Trigger>
+                                <DataTrigger Binding="{Binding Path=IsCardIdleActive}" Value="True">
+                                    <Setter Property="Text" >
+                                        <Setter.Value>
+                                            <Binding Path="ActiveProcessCount" 
+                                                 StringFormat="{x:Static res:Resources.GamesRunning}"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </DataTrigger>
                             </Style.Triggers>
                         </Style>
-                    </Label.Style>
-                    <Label.InputBindings>
-                        <MouseBinding Gesture="LeftClick" Command="{Binding Path=LogoutCmd}" />
-                    </Label.InputBindings>
-                </Label>
-            </StackPanel>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Grid>
 
-            <StackPanel Grid.Column="2" Margin="0,25,0,0">
+            <StackPanel Grid.Row="0" Grid.Column="2" Margin="0,25,0,0">
                 <Label Name="lblLevel" Content="{x:Static res:Resources.SteamLevel}" HorizontalAlignment="Center" 
                        FontSize="24" Foreground="White"/>
                 <Border BorderBrush="{DynamicResource DynLevelBorder}" BorderThickness="2" CornerRadius="18" 
@@ -174,7 +231,10 @@
                     Background="Transparent" BorderThickness="0"
                     TabStripPlacement="Left">
 
-            <TabItem Padding="0,5,0,0" Header="{x:Static res:Resources.BadgesHeader}">
+            <TabItem Padding="0,5,0,0" 
+                     Visibility="{Binding IsAuthorized, Converter={StaticResource BoolToVisible}}"
+                     IsSelected="{Binding IsAuthorized, Mode=OneWay}"
+                     Header="{x:Static res:Resources.BadgesHeader}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -343,15 +403,17 @@
                             <Button Grid.Column="3" Margin="25,0,0,0" 
                                     FontSize="18"  Content="&#x2699;" 
                                     FontWeight="ExtraBold"
-                                    ToolTip="{x:Static res:Resources.Settings}"                                    
+                                    ToolTip="{x:Static res:Resources.Settings}"      
+                                    Command="{Binding Path=SettingsCmd}"
                                     Style="{StaticResource CmdButton}"
-                                    HorizontalAlignment="Left" VerticalAlignment="Top" Click="SettingsDialog"/>
+                                    HorizontalAlignment="Left" VerticalAlignment="Top"/>
                         </Grid>
                     </DockPanel>
                 </Grid>
             </TabItem>
 
-            <TabItem Header="{x:Static res:Resources.QueueHeader}">
+            <TabItem Header="{x:Static res:Resources.QueueHeader}" 
+                     Visibility="{Binding IsAuthorized, Converter={StaticResource BoolToVisible}}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -486,7 +548,8 @@
                 </Grid>
             </TabItem>
             
-            <TabItem Header="{x:Static res:Resources.TimeIdleHeader}">
+            <TabItem Header="{x:Static res:Resources.TimeIdleHeader}" 
+                     IsSelected="{Binding IsUnknown, Mode=OneWay}">
                 <Grid Margin="0,10,0,0">
                     <Grid.Resources>
                         <Style x:Key="TileBorder" TargetType="Border">
@@ -660,8 +723,10 @@
             </TabItem>
         </TabControl>
 
-        <StackPanel Grid.Row="2" Grid.Column="1" Name="Stats" 
-                                Orientation="Horizontal" HorizontalAlignment="Center" Margin="15,0">
+        <StackPanel Grid.Row="2" Grid.Column="1" 
+                    Name="Stats" 
+                    Visibility="{Binding IsAuthorized, Converter={StaticResource BoolToVisible}}"
+                    Orientation="Horizontal" HorizontalAlignment="Center" Margin="15,0">
             <Label Content ="{x:Static res:Resources.NextSync}" Style="{StaticResource propName}"/>
             <TextBlock Text ="{Binding Path=SyncTime}" Style="{StaticResource propValue}"/>
 
