--- a/SourceCode/CardIdleRemastered/Views/BadgesWindow.xaml
+++ b/SourceCode/CardIdleRemastered/Views/BadgesWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:res="clr-namespace:CardIdleRemastered.Properties"
         xmlns:loc="clr-namespace:CardIdleRemastered"        
         xmlns:cmd="clr-namespace:CardIdleRemastered.Commands"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="{x:Static res:Resources.Title}" Height="Auto" Width="Auto"         
         WindowStartupLocation="CenterScreen" 
         Background="{DynamicResource DarkTheme}"
@@ -500,9 +501,9 @@
                     </DataGrid>
 
 
-
                     <Grid Grid.Row="1" Margin="0,21,0,15">
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
@@ -515,26 +516,43 @@
                                   ItemsSource="{Binding Path=Idler.IdleModes}" 
                                   SelectedItem="{Binding Path=Idler.Mode, Converter={StaticResource enumTranslator}}" >
                             </ComboBox>
-
+                        </StackPanel>
+                        
+                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBlock Text="{x:Static res:Resources.CfgIdleProcessCount}" Foreground="White" VerticalAlignment="Center"/>
+                            <xctk:ByteUpDown MinWidth="60" Margin="5,0"
+                                             Minimum="1"
+                                             Value="{Binding Path=Idler.MaxIdleInstanceCount}">
+                                <xctk:ByteUpDown.Style>
+                                    <Style TargetType="xctk:ByteUpDown">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Path=Idler.IsActive}" Value="True">
+                                                <Setter Property="IsEnabled" Value="False"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </xctk:ByteUpDown.Style>
+                            </xctk:ByteUpDown>
                         </StackPanel>
 
                         <Button Content="{x:Static res:Resources.Start}"
                                 Command ="{Binding IdleCmd}" CommandParameter="1"
-                            Grid.Column="1"
-                            HorizontalAlignment="Right"
-                            Margin="0,0,10,0"
-                            Padding="10,4,10,4" 
+                                
+                                Grid.Column="2"
+                                HorizontalAlignment="Right"
+                                Margin="0,0,10,0"
+                                Padding="10,4,10,4" 
                              
-                            FontSize="18"
-                            BorderThickness="2" 
-                            Background="{DynamicResource DynIdleButtons}"                             
-                            HorizontalContentAlignment="Center" 
-                            VerticalContentAlignment="Center"/>
+                                FontSize="18"
+                                BorderThickness="2" 
+                                Background="{DynamicResource DynIdleButtons}"
+                                HorizontalContentAlignment="Center" 
+                                VerticalContentAlignment="Center"/>
 
                         <Button Content="{x:Static res:Resources.Stop}"     
                                 Command ="{Binding IdleCmd}" CommandParameter="0"
                                 
-                                Grid.Column="2" 
+                                Grid.Column="3" 
                                 HorizontalAlignment="Left"
                                 Margin="10,0,0,0"
                                 Padding="10,4,10,4" 
