--- a/SourceCode/CardIdleRemastered/Views/GameSelectionWindow.xaml
+++ b/SourceCode/CardIdleRemastered/Views/GameSelectionWindow.xaml
@@ -24,9 +24,21 @@
                    Foreground="White"/>
         
         <TextBox Grid.Row="1" Margin="5" 
-                 Text="{Binding Path=StorePageUrl, UpdateSourceTrigger=PropertyChanged}"
-                 Foreground="White" Background="Transparent"
-                 BorderThickness="1" BorderBrush="LightGray"/>
+                 Text="{Binding Path=StorePageUrl, Delay=400, UpdateSourceTrigger=PropertyChanged}"                 
+                 BorderThickness="1" BorderBrush="LightGray">
+            <TextBox.Style>
+                <Style TargetType="TextBox">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter Property="Background" Value="White"/>
+                            <Setter Property="Foreground" Value="Black"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBox.Style>
+        </TextBox>
         
         <Grid Grid.Row="2"  DataContext="{Binding Path=SelectedGame}">
             <Grid.ColumnDefinitions>
